--- a/public/text.html
+++ b/public/text.html
@@ -20,8 +20,8 @@
 </div>
 
 
-<script src="js/react.js"></script>
-<script src="js/JSXTransformer.js"></script>
+<script src="bower_components/react.min.js"></script>
+<script src="bower_components/JSXTransformer.js"></script>
 <script src="socket.io/socket.io.js"></script>
 <script src="una_js/una.js"></script>
 <script type="text/jsx" src="js/text.js">
