--- a/public/test.html
+++ b/public/test.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div id="text_poker">
+            <div id="cards-container">
             </div>
         </div>
     </div>
@@ -22,10 +22,7 @@
 
 <script src="bower_components/react/react.min.js"></script>
 <script src="bower_components/react/JSXTransformer.js"></script>
-<script src="socket.io/socket.io.js"></script>
-<script src="una_js/una.js"></script>
-<script type="text/jsx" src="js/text.js">
-</script>
+<script type="text/jsx" src="js/phone.js"></script>
 </body>
 
 </html>
