--- a/public/test.html
+++ b/public/test.html
@@ -5,7 +5,7 @@
 </style>
 
 <link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/text.css" />
+<link rel="stylesheet" href="css/cards.css" />
 </head>
 
 <body>
@@ -22,6 +22,7 @@
 
 <script src="bower_components/react/react.min.js"></script>
 <script src="bower_components/react/JSXTransformer.js"></script>
+<script src="bower_components/underscore/underscore-min.js"></script>
 <script type="text/jsx" src="js/phone.js"></script>
 </body>
 
