--- a/public/text.html
+++ b/public/text.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
 <style>
 </style>
@@ -8,30 +8,33 @@
 <link rel="stylesheet" href="css/cards.css" />
 </head>
 
-<body>
+<body ng-controller="HandCtrl">
 
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div id="text_poker">
+            <button class="btn btn-success" ng-click="startGame()">Start Game</button>
+            <button class="btn btn-danger" ng-click="resetDeck()">Reset Deck</button>
+            <button class="btn btn-warning" ng-click="discardCards()">Discard Cards</button>
+            <div id="button-draw-cards-container">
+                <div class="btn-group" role="group">
+                    <button ng-repeat="number in [1,2,3,4,5]" type="button" class="btn btn-default" ng-click="drawCards(number)">
+                        {{number}}
+                    </button>
+                </div>
             </div>
-            <span id="button-start-game-container"></span>
-            <span id="button-reset-deck-container"></span>
-            <div id="button-draw-cards-container"></div>
             <div id="cards-container">
+                <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card.number)}}.png"} ng-click="card.selected = !card.selected">
             </div>
         </div>
     </div>
 </div>
 
 <script src="bower_components/underscore/underscore-min.js"></script>
-<script src="bower_components/react/react.js"></script>
-<script src="bower_components/react/JSXTransformer.js"></script>
+<script src="bower_components/angular/angular.js"></script>
 <script src="socket.io/socket.io.js"></script>
 <script src="una_js/una.js"></script>
-<script type="text/jsx" src="js/cards.js"></script>
-<script type="text/jsx" src="js/text.js"></script>
-</script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
