--- a/public/text.html
+++ b/public/text.html
@@ -10,7 +10,7 @@
 
 <body ng-controller="HandCtrl">
 
-<div class="container">
+<div class="container" ng-class="{'container-loaded': loaded}">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
