--- a/public/discard.html
+++ b/public/discard.html
@@ -15,6 +15,7 @@
         <div class="col-md-6 col-md-offset-3">
 
             <button class="btn btn-danger" ng-click="resetDeck()">Reset Deck</button>
+            <button class="btn btn-success" ng-click="distributeCards(13)">Distribute 13</button>
 
              <div id="cards-container">
                 <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card.number)}}.png"} ng-click="card.selected = !card.selected">
