--- a/public/text.html
+++ b/public/text.html
@@ -9,32 +9,42 @@
 </head>
 
 <body ng-controller="HandCtrl">
-
-<div class="container">
+<nav class="navbar navbar-inverse" role="navigation">
+    <h3 class="title">Poker King</h3>
+</nav>
+<div class="container-fluid">
+    
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
             <div ng-show="!mode">
-            <button class="btn btn-success" ng-click="startGame()">Start Game</button>
-            <button class="btn btn-success" ng-click="startDiscard()">Start Discard</button>
+            <button class="btn btn-success btn-block" ng-click="startGame()">Start Game</button>
+            <button class="btn btn-info btn-block" ng-click="startDiscard()">Start Discard</button>
             </div>
 
             <div ng-show="mode == 'discard'">
                 <button class="btn btn-danger" ng-click="resetDeck()">Reset Deck</button>
             </div>
-            <div ng-show="mode == 'player'">
-                <button class="btn btn-warning" ng-click="discardCards()">Discard Cards</button>
-            </div>
 
-            <div id="button-draw-cards-container" ng-show="mode == 'player'">
-                <div class="btn-group" role="group">
-                    <button ng-repeat="number in [1,2,3,4,5]" type="button" class="btn btn-default" ng-click="drawCards(number)">
-                        {{number}}
-                    </button>
+            <div id="button-draw-cards-container row" ng-show="mode == 'player'">
+                <div class="col-md-4">
+                    Draw Cards:
+                </div>
+                <div class="col-md-8">
+                    <div class="btn-group" role="group">
+                        <button ng-repeat="number in [1,2,3,4,5]" type="button" class="btn btn-default" ng-click="drawCards(number)">
+                            {{number}}
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div id="cards-container">
-                <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card.number)}}.png"} ng-click="card.selected = !card.selected">
+
+            <div class="cards-container">
+                <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card.number)}}.png"} ng-click="card.selected = !card.selected" style="{{card.style}}">
+            </div>
+
+            <div ng-show="mode == 'player'">
+                <button class="btn btn-warning btn-block" ng-click="discardCards()" ng-show="countSelected() > 0">Discard Cards</button>
             </div>
         </div>
     </div>
