Updated container visibility

--- a/public/discard.html
+++ b/public/discard.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-inverse" role="navigation">
     <h3 class="title">Poker King</h3>
 </nav>
-<div class="container" ng-class="{'container-loaded': loaded}">
+<div class="container-fluid" ng-class="{'container-loaded': loaded}">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <button class="btn btn-danger" ng-click="resetDeck()">Reset Deck</button>
