--- a/public/text.html
+++ b/public/text.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="cards-container">
-                <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card.number)}}.png"} ng-click="card.selected = !card.selected" style="{{card.style}}">
+                <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card)}}.png"} ng-click="card.selected = !card.selected" style="{{card.style}}">
             </div>
 
             <div ng-show="mode == 'player'">
