--- a/public/text.html
+++ b/public/text.html
@@ -30,6 +30,7 @@
                 <div class="col-md-4">
                     Draw Cards:
                 </div>
+                <button class="btn btn-info btn-block" ng-click="count()">Count</button>
                 <div class="col-md-8">
                     <div class="btn-group" role="group">
                         <button ng-repeat="number in [1,2,3,4,5]" type="button" class="btn btn-default" ng-click="drawCards(number)">
