--- a/public/text.html
+++ b/public/text.html
@@ -6,13 +6,15 @@
 
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" href="css/cards.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body ng-controller="HandCtrl">
 
 <img src="img/logo.png" class="img-responsive logo" width="280">
 <div class="container-fluid" ng-class="{'container-loaded': loaded}">
-    <strong>{{playerName}}</strong>
+    <strong>Player Name: {{playerName}}</strong>
+    <br>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
@@ -46,13 +48,14 @@
                 </div>
             </div>
 
+            <div ng-show="mode == 'player'">
+                <button class="btn btn-warning btn-block" ng-click="discardCards()" ng-show="countSelected() > 0">Discard Cards</button>
+            </div>
+
             <div class="cards-container">
                 <img ng-repeat="card in cards" class="card {{{true: 'card-selected'}[card.selected]}}" ng-src="img/{{getCardFromIndex(card)}}.png"} ng-click="card.selected = !card.selected" style="{{card.style}}">
             </div>
 
-            <div ng-show="mode == 'player'">
-                <button class="btn btn-warning btn-block" ng-click="discardCards()" ng-show="countSelected() > 0">Discard Cards</button>
-            </div>
         </div>
     </div>
 </div>
